<resources>
    <string name="app_name">proyecto</string>

    //String activity_start
    <string name="btn_start">Entrar</string>
    <string name="textViewStart">Escribe tu nombre</string>

    //String activity_home
    <string name="textViewBienvenida">Bienvenido/a</string>
    <string name="textViewExplicacion">Seleccione una categoría </string>
    <string name="textViewSucursales">Sucursales</string>
    <string name="textViewProductos">Productos</string>
    <string name="textViewservicios">Servicios</string>
    <string name="btn_sucursales">Ir</string>
    <string name="btn_productos">Ir</string>
    <string name="btn_servicios">Ir</string>

    //String activity_products
    <string name="tvProductsTitle">Productos</string>


</resources>