<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    android:layout_marginTop="10sp"
    android:layout_marginRight="10sp"
    android:orientation="vertical"
    tools:context=".Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:background="@drawable/fondo2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textViewBienvenida"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="327dp"
            android:layout_height="72dp"
            android:gravity="center"
            android:textSize="45dp" />
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewExplicacion"
                    android:layout_width="459dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewExplicacion"
                    android:textSize="34sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewSucursales"
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewSucursales"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnSucursales"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="#F4BD6E"
                    android:text="@string/btn_sucursales"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewProductos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewProductos"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnProductos"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="#F4BD6E"
                    android:text="@string/btn_productos"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewServicios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textViewservicios"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnServicios"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="#F4BD6E"
                    android:text="@string/btn_servicios"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>